--- a/index.html
+++ b/index.html
@@ -772,17 +772,17 @@
                             <!--div class="col-lg-8"-->
                                 <div class="modal-body">
 			    	    <ul class="fa-ul">
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadraticc Forms</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted">Riemann Sums</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted">Hill Spherical Vortex</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted">Fourier Series</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted">Trigonometric Circle</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted">Frecuency Parameter at Trigonometric Functions</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted">Conic sections and Eccentricity</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted">Meteor Trajectory</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted">Wave Equation</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted">Heat equation</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted">Simple vs Compound Interest</p></a></li>					
+  					<li>&#09;<i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadratic Forms</p></a></li>
+  					&#09;<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">Riemann Sums</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left">Hill Spherical Vortex</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left">Fourier Series</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left">Trigonometric Circle</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left">Frecuency Parameter at Trigonometric Functions</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left">Conic sections and Eccentricity</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left">Meteor Trajectory</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left">Wave Equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left">Heat equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left">Simple vs Compound Interest</p></a></li>					
 				    </ul>
 			
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
