--- a/index.html
+++ b/index.html
@@ -771,9 +771,9 @@
                         <!--div class="row"-->
                             <!--div class="col-lg-8"-->
                                 <div class="modal-body">
-			    	    <ul class="fa-ul">
-  					<li>&#09;<i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadratic Forms</p></a></li>
-  					&#09;<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">Riemann Sums</p></a></li>
+			    	    &#09;&#09;<ul class="fa-ul">
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadraticc Forms</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">Riemann Sums</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left">Hill Spherical Vortex</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left">Fourier Series</p></a></li>
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left">Trigonometric Circle</p></a></li>
