--- a/index.html
+++ b/index.html
@@ -768,8 +768,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="container">
-                        <!--div class="row"-->
-                            <!--div class="col-lg-8"-->
+                        <div class="row">
+			    <div class="col-md-4">
+			    </div>
+                            <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadratic Forms</p></a></li>
@@ -790,8 +792,8 @@
                                         Back
                                     </button>
                                 </div>
-                            <!--/div-->
-                        <!--/div-->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
