--- a/index.html
+++ b/index.html
@@ -774,17 +774,17 @@
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
-  					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadratic Forms</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">Riemann Sums</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left">Hill Spherical Vortex</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left">Fourier Series</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left">Trigonometric Circle</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left">Frecuency Parameter at Trigonometric Functions</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left">Conic sections and Eccentricity</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left">Meteor Trajectory</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left">Wave Equation</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left">Heat equation</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i>&nbsp<a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left">Simple vs Compound Interest</p></a></li>					
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadratic Forms</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">Riemann Sums</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left">Hill Spherical Vortex</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left">Fourier Series</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left">Trigonometric Circle</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left">Frecuency Parameter at Trigonometric Functions</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left">Conic sections and Eccentricity</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left">Meteor Trajectory</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left">Wave Equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left">Heat equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link fa-2x"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank">&nbsp<p class="text-muted" align="left">Simple vs Compound Interest</p></a></li>					
 				    </ul>
 			
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
