--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left">Conic sections and Eccentricity</p></a></li>
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left">Meteor Trajectory</p></a></li>
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left">Wave Equation</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left">Heat equation</p></a></li>
-					<li><i class="fa-li fa fa-external-link fa-2x"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank">&nbsp<p class="text-muted" align="left">Simple vs Compound Interest</p></a></li>					
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left">     Heat equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link fa-2x"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left">&nbsp Simple vs Compound Interest</p></a></li>					
 				    </ul>
 			
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
