--- a/index.html
+++ b/index.html
@@ -768,6 +768,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="container">
+			<div class="text-center">
+                    	    <h2 class="section-heading text-uppercase">Geogebra Applets</h2>
+                    	    <h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3>
+                	</div>
                         <div class="row">
 			    <div class="col-md-4">
 			    </div>
