--- a/index.html
+++ b/index.html
@@ -767,10 +767,11 @@
         <div class="portfolio-modal modal fade" id="portfolioApplet" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
+		    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
 			<div class="text-center">
                     	    <h2 class="section-heading text-uppercase">Geogebra Applets</h2>
-                    	    <h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3>
+                    	    <!--h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3 -->
                 	</div>
                         <div class="row">
 			    <div class="col-md-4">
@@ -791,10 +792,10 @@
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Simple vs Compound Interest &nbsp&nbsp</p></a></li>					
 				    </ul>
 			
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                    <!--button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Back
-                                    </button>
+				</button-->
                                 </div>
                             </div>
                         </div>
