--- a/index.html
+++ b/index.html
@@ -774,17 +774,29 @@
                     	    <!--h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3 -->
                 	</div>
                         <div class="row">
+                            <div class="col-md-4">
+                                <div class="modal-body" style="text-align: center">
+			    	    <ul class="fa-ul" style="text-align: left">
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Quadratic Forms &nbsp&nbsp</p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Riemann Sums &nbsp&nbsp</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Hill Spherical Vortex &nbsp&nbsp</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Fourier Series &nbsp&nbsp</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Trigonometric Circle &nbsp&nbsp</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left">Frecuency Parameter at Trigonometric Functions</p></a></li>
+				    </ul>
+			
+                                    <!--button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Back
+				</button-->
+                                </div>
+                            </div>
+			    
 			    <div class="col-md-4">
 			    </div>
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Quadratic Forms &nbsp&nbsp</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Riemann Sums &nbsp&nbsp</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Hill Spherical Vortex &nbsp&nbsp</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Fourier Series &nbsp&nbsp</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Trigonometric Circle &nbsp&nbsp</p></a></li>
-					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left">Frecuency Parameter at Trigonometric Functions</p></a></li>
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Conic sections and Eccentricity &nbsp&nbsp</p></a></li>
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Meteor Trajectory &nbsp&nbsp</p></a></li>
 					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left">&nbsp&nbsp Wave Equation &nbsp&nbsp</p></a></li>
