--- a/index.html
+++ b/index.html
@@ -772,6 +772,11 @@
 			<div class="text-center">
                     	    <h2 class="section-heading text-uppercase">Geogebra Applets</h2>
                     	    <!--h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3 -->
+			    <!--Vertical spacing -->
+			    <p> </p>
+    			    <br>
+			    <br>
+			    <p> </p>
                 	</div>
                         <div class="row">
                             <div class="col-md-4">
