--- a/index.html
+++ b/index.html
@@ -817,27 +817,33 @@
         <div class="portfolio-modal modal fade" id="portfolioInteractive" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+		    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
-                                    <p class="item-intro text-muted">2022</p>
-				    <p><a href="https://arxiv.org/abs/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
-				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4" target="_blank"> Go to published version</a></p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Topic:</strong>
-                                            Calculus of Variations and Partial Differential Equations 
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Back
-                                    </button>
+			<div class="text-center">
+                    	    <h2 class="section-heading text-uppercase">Interactive Lessons</h2>
+                    	    <!--h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3 -->
+			    <!--Vertical spacing -->
+			    <p> </p>
+			    <br>
+			    <p> </p>
+                	</div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="modal-body" style="text-align: center">
+			    	    <ul class="fa-ul" style="text-align: left">
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDnByzmdPW7uN2dFkGmNYAmopUsqBYOvd88Xl5krAFcWKLFQ/viewform?usp=sf_link" target="_blank"><p class="text-muted" align="left"> Fundamental theorem of Calculus </p></a></li>
+  				    </ul>
+                                </div>
+                            </div>    
+			    <div class="col-md-4">
+				<!--div class="modal-body" style="text-align: center">
+			    	</div-->
+			    </div>
+                            <div class="col-md-4">
+                                <div class="modal-body" style="text-align: center">
+			    	    <ul class="fa-ul" style="text-align: left">
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/CLASE_MUESTRA.pdf"  target="_blank"><p class="text-muted" align="left"> Meteorito a la vista! </p></a></li>
+				    </ul>
                                 </div>
                             </div>
                         </div>
@@ -850,27 +856,44 @@
         <div class="portfolio-modal modal fade" id="portfolioNotes" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+		    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
-                                    <p class="item-intro text-muted">2022</p>
-				    <p><a href="https://arxiv.org/abs/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
-				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4" target="_blank"> Go to published version</a></p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Topic:</strong>
-                                            Calculus of Variations and Partial Differential Equations 
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Back
-                                    </button>
+			<div class="text-center">
+                    	    <h2 class="section-heading text-uppercase">Notes</h2>
+                    	    <!--h3 class="section-subheading text-muted"> The following applet were designed to visualize an specific topic.</h3 -->
+			    <!--Vertical spacing -->
+			    <p> </p>
+			    <br>
+			    <p> </p>
+                	</div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="modal-body" style="text-align: center">
+			    	    <ul class="fa-ul" style="text-align: left">
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left"> Quadratic Forms </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left"> Riemann Sums </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left"> Fourier Series </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left"> Wave Equation </p></a></li>
+				    </ul>
+                                </div>
+                            </div>    
+			    <div class="col-md-4">
+				<div class="modal-body" style="text-align: center">
+			    	    <ul class="fa-ul" style="text-align: left">
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left"> Heat equation </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left"> Conic sections and Eccentricity </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left"> Meteor Trajectory </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left"> Frecuency Parameter at Trigonometric Functions</p></a></li>
+				    </ul>
+				</div>
+			    </div>
+                            <div class="col-md-4">
+                                <div class="modal-body" style="text-align: center">
+			    	    <ul class="fa-ul" style="text-align: left">
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left"> Simple vs Compound Interest </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left"> Hill Spherical Vortex </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left"> Trigonometric Circle </p></a></li>
+				    </ul>
                                 </div>
                             </div>
                         </div>
