--- a/index.html
+++ b/index.html
@@ -836,8 +836,11 @@
                                 </div>
                             </div>    
 			    <div class="col-md-4">
-				<!--div class="modal-body" style="text-align: center">
-			    	</div-->
+				<div class="modal-body" style="text-align: center">
+				    <ul class="fa-ul" style="text-align: left">
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/Intro_PDE_2orden.pdf" target="_blank"><p class="text-muted" align="left"> Elementary introduction to second order PDEs </p></a></li>
+  				    </ul>
+			    	</div>
 			    </div>
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
