--- a/index.html
+++ b/index.html
@@ -777,15 +777,12 @@
 			    <br>
 			    <p> </p>
                 	</div>
-
-			<iframe scrolling="no" title="Espirógrafo" src="https://www.geogebra.org/material/iframe/id/cmszypte/width/1440/height/761/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false" width="1440px" height="761px" style="border:0px;"> </iframe>
-			    
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left"> Quadratic Forms </p></a></li>
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left"> Riemann Sums </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmszypte" target="_blank"><p class="text-muted" align="left"> Spirograph </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left"> Fourier Series </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left"> Wave Equation </p></a></li>
 				    </ul>
@@ -804,7 +801,8 @@
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left"> Simple vs Compound Interest </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left"> Riemann Sums </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left"> Simple vs Compound Interest </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left"> Hill Spherical Vortex </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left"> Trigonometric Circle </p></a></li>
 				    </ul>
