--- a/index.html
+++ b/index.html
@@ -874,29 +874,29 @@
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left"> Quadratic Forms </p></a></li>
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left"> Riemann Sums </p></a></li>
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left"> Fourier Series </p></a></li>
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left"> Wave Equation </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/exponencial_y_logaritmo.pdf" target="_blank"><p class="text-muted" align="left"> Exponential and logarithm </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/funciones_y_cardinalidad.pdf" target="_blank"><p class="text-muted" align="left"> Functions and Cardinality </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/los_reales_y_sus_propiedades.pdf" target="_blank"><p class="text-muted" align="left"> Real numbers </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/sucesiones.pdf" target="_blank"><p class="text-muted" align="left"> Sequences </p></a></li>
 				    </ul>
                                 </div>
                             </div>    
 			    <div class="col-md-4">
 				<div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted" align="left"> Heat equation </p></a></li>
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left"> Conic sections and Eccentricity </p></a></li>
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left"> Meteor Trajectory </p></a></li>
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left"> Frecuency Parameter at Trigonometric Functions</p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/funciones continuas.pdf" target="_blank"><p class="text-muted" align="left"> Results on continuous functions </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/funciones_convexas.pdf" target="_blank"><p class="text-muted" align="left"> Convex functions </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/series.pdf" target="_blank"><p class="text-muted" align="left"> Series </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/Integrabilidad-Riemann.pdf" target="_blank"><p class="text-muted" align="left"> Riemann Integrability</p></a></li>
 				    </ul>
 				</div>
 			    </div>
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left"> Simple vs Compound Interest </p></a></li>
-					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left"> Hill Spherical Vortex </p></a></li>
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left"> Trigonometric Circle </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/heine-borel.pdf" target="_blank"><p class="text-muted" align="left"> Heine-Borel </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/orden derivacion.pdf" target="_blank"><p class="text-muted" align="left"> Partial differentiation </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/Puebas-teo-integrales.pdf" target="_blank"><p class="text-muted" align="left"> Integral Theorems </p></a></li>
 				    </ul>
                                 </div>
                             </div>
