--- a/index.html
+++ b/index.html
@@ -897,6 +897,7 @@
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/heine-borel.pdf" target="_blank"><p class="text-muted" align="left"> Heine-Borel </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/orden derivacion.pdf" target="_blank"><p class="text-muted" align="left"> Partial differentiation </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/notes/Puebas-teo-integrales.pdf" target="_blank"><p class="text-muted" align="left"> Integral Theorems </p></a></li>
+					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="assets/img/Intro_PDE_2orden.pdf" target="_blank"><p class="text-muted" align="left"> Elementary introduction to second order PDEs </p></a></li>
 				    </ul>
                                 </div>
                             </div>
