--- a/index.html
+++ b/index.html
@@ -802,6 +802,7 @@
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left"> Riemann Sums </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/map2qxhx" target="_blank"><p class="text-muted" align="left"> Approximation of &pi </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left"> Simple vs Compound Interest </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left"> Hill Spherical Vortex </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left"> Trigonometric Circle </p></a></li>
