--- a/index.html
+++ b/index.html
@@ -795,14 +795,15 @@
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted" align="left"> Conic sections and Eccentricity </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted" align="left"> Meteor Trajectory </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted" align="left"> Frecuency Parameter at Trigonometric Functions</p></a></li>
-				    </ul>
+				    <li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/z6csyqnp" target="_blank"><p class="text-muted" align="left"> Slow Approximation of π </p></a></li>
+  					</ul>
 				</div>
 			    </div>
                             <div class="col-md-4">
                                 <div class="modal-body" style="text-align: center">
 			    	    <ul class="fa-ul" style="text-align: left">
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted" align="left"> Riemann Sums </p></a></li>
-  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/map2qxhx" target="_blank"><p class="text-muted" align="left"> Approximation of &pi </p></a></li>
+  					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/map2qxhx" target="_blank"><p class="text-muted" align="left"> Approximation of π </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted" align="left"> Simple vs Compound Interest </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted" align="left"> Hill Spherical Vortex </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted" align="left"> Trigonometric Circle </p></a></li>
