--- a/index.html
+++ b/index.html
@@ -391,11 +391,14 @@
                         </span>
                         <h4 class="my-3">Teacher</h4>
                          <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
-                       <p class="text-muted"> Differential and Integral Calculus I</p>
-		       <p class="text-muted"> Differential and Integral Calculus II</p>
-		       <p class="text-muted"> Differential and Integral Calculus III</p>
-		       <p class="text-muted"> Differential and Integral Calculus IV</p>
-                    </div>
+                       		<p class="text-muted"> Differential and Integral Calculus I</p>
+		       		   		<p class="text-muted"> Differential and Integral Calculus II</p>
+		       				<p class="text-muted"> Differential and Integral Calculus III</p>
+		       				<p class="text-muted"> Differential and Integral Calculus IV</p>
+                    	<p class="text-muted"><b>  Departamento de Matemáticas - UAM</b></p>
+                       		<p class="text-muted"> Differential Calculus for Biological and Health Sciences</p>
+		       		   		<p class="text-muted"> Multivariable Calculus for Biological and Health Sciences</p>
+					</div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -785,6 +788,7 @@
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/cmszypte" target="_blank"><p class="text-muted" align="left"> Spirograph </p></a></li>
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left"> Fourier Series </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left"> Wave Equation </p></a></li>
+				    <li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/qfdyjjgf" target="_blank"><p class="text-muted" align="left"> How to define angles </p></a></li>
 				    </ul>
                                 </div>
                             </div>    
