--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
                 <div class="masthead-heading text-uppercase">Welcome to my page!</div>
                  <div class="masthead-subheading">Lauro Morales Montesinos</div>
-                 <div class="masthead-subheading">IIMAS - UNAM</div>
+                 <div class="masthead-subheading">Math Deparment UAM-I</div>
                 <!-- <div class="masthead-heading text-uppercase">It's Nice To Meet You</div> -->
                 <a class="btn btn-primary btn-xl text-uppercase" href="#about">Tell Me More</a>
             </div>
