--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
                 <div class="masthead-heading text-uppercase">Welcome to my page!</div>
                  <div class="masthead-subheading">Lauro Morales Montesinos</div>
-                 <div class="masthead-subheading">Math Deparment UAM-I</div>
+                 <div class="masthead-subheading">Numerical Analysis and Mathematical Modeling - Math Deparment, UAM Iztapalapa </div>
                 <!-- <div class="masthead-heading text-uppercase">It's Nice To Meet You</div> -->
                 <a class="btn btn-primary btn-xl text-uppercase" href="#about">Tell Me More</a>
             </div>
@@ -593,8 +593,8 @@
                 <!-- * * SB Forms Contact Form * *-->
                
                     <div class="row align-items-stretch mb-5">
-                        <p style="color:White;"> <i class="fas fa-map-marked-alt" style="font-size:30px; color:#ffc800"></i> Instituto de Investigaciones en Matematicas Aplicadas IIMAS- UNAM</p>
-			<p style="color:White;">Circuito escolar s/n, Ciudad Universitaria, C.P. 04510 CDMX México</p>
+                        <p style="color:White;"> <i class="fas fa-map-marked-alt" style="font-size:30px; color:#ffc800"></i> Math Department - UAM Iztapalapa</p>
+			<p style="color:White;">Office AT-312, Building  AT, Av. San Rafael Atlixco 186, Leyes de Reforma 1ra Secc, Iztapalapa, 09340 Ciudad de México, CDMX</p>
                         <a href="mailto:lmm@ciencias.unam.mx"> <i class="fas fa-envelope-open" style="font-size:30px; color:#ffc800"></i> lmm@ciencias.unam.mx</a>
 			 <br> </br>
                     </div>
