--- a/index.html
+++ b/index.html
@@ -789,7 +789,8 @@
   					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted" align="left"> Fourier Series </p></a></li>
 					<li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted" align="left"> Wave Equation </p></a></li>
 				    <li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/qfdyjjgf" target="_blank"><p class="text-muted" align="left"> How to define angles </p></a></li>
-				    <li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/af4u6fak" target="_blank"><p class="text-muted" align="left"> Trigonometric Circle </p></a></li>
+				    <li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/af4u6fak" target="_blank"><p class="text-muted" align="left"> Trigonometric circle </p></a></li>
+				    <li><i class="fa-li fa fa-external-link text-primary"></i><a href="https://www.geogebra.org/m/n3vk4c2z" target="_blank"><p class="text-muted" align="left"> Trigonometric function parameters </p></a></li>
 				    </ul>
                                 </div>
                             </div>    
